--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --font-family: 'Montserrat', sans-serif;
+
+  --gradient-text: linear-gradient(89.97deg, #021a87 1.84%, #006713 102.67%);
+  --gradient-bar: linear-gradient(70.22deg, #062acd -13.86%, #06aa24 99.55%);
+  
+  --color-bg: #ffffff;
+  --color-footer : linear-gradient(70.22deg, #ecf4fd -13.86%, #dddddd 99.55%);
+  --color-blog: #042c54;
+  --color-text: #090029;
+  --color-subtext: #FF8A71;
 }
