disabled demo button on interest from page

--- a/src/pages/interestForm/interestForm.css
+++ b/src/pages/interestForm/interestForm.css
@@ -4,6 +4,10 @@
     flex-direction: row;
 }
 
+.augmented__navbar-sign button {
+    display: none;
+}
+
 .augmented__interestForm-subscriptions {
     flex: 1;
     display: flex;
